# sdefaa-code-snippet

./: pom.xml
flowable-snippet/: pom.xml
flowable-snippet/src/main/java/com/example/flowablesnippet/: FlowableSnippetApplication.java
flowable-snippet/src/main/resources/: application.yml
flowable-snippet/src/main/resources/processes/: DefaSnackApply.bpmn20.xml
flowable-snippet/src/test/java/com/example/flowablesnippet/: FlowableSnippetApplicationTests.java
jni-snippet/: pom.xml
jni-snippet/cpp/meowParser/: CMakeLists.txt  meowParser.cpp
jni-snippet/cpp/meowParserJNI/: CMakeLists.txt  meowParser.h  meowParser.lib  meowParserJNI.cpp
jni-snippet/src/main/java/com/sdefaa/jni/: MeowParser.java  MeowType.java  ParserContent.java  ParserException.java  ParserResult.java  com_sdefaa_jni_MeowParser.h
jni-snippet/src/test/java/: MeowParserTest.java
